# slapaman

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  backup.rs  create.rs  init.rs  main.rs  memory.rs  remove.rs  run.rs  server.rs  update.rs  version.rs  world.rs
src/flavors/: fabric.rs  mod.rs  paper.rs
src/net/: http.rs  mod.rs
