[package]
name = "slapaman"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.4.18", features = ["derive"] }
directories = "6.0.0"
fs_extra = "1.3.0"
home = "0.5"
regex = "1.11.1"
reqwest = "0.12.15"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha1 = "0.10.6"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
which = "7.0.3"
